<resources>
    <string name="app_name" translatable="false">HomeBuilt</string>
    <string name="appName" translatable="false">HomBuilt.com</string>
    <string name="facebook_app_id">141848516406261</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- nav menu id's -->
    <string name="action_settings">Settings</string>
    <string name="app_name_logo">app logo</string>
    <string name="get_start">get start</string>
    <string name="home">Home</string>
    <string name="login">Log In</string>
    <string name="my_cart">My Cart</string>
    <string name="how_it_works">How It Works</string>
    <string name="services">Services</string>
    <string name="notifications">Notifications</string>
    <string name="help">Help</string>
    <string name="feedback">Feedback</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_up">Sign Up</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="phone_no">Phone No</string>
    <string name="email_id">E-mail/Mobile Number</string>
    <string name="clear">clear</string>
    <string name="show_password">show password</string>
    <string name="forget_password">Forget Password?</string>
    <string name="register">continue</string>
    <string name="login_with">Or login with</string>
    <string name="google_login">Log in with Google</string>
    <string name="facebook_login">Log in with Facebook</string>
    <string name="logout">log out</string>
    <string name="your_locality">your locality</string>
    <string name="all_service">HomeBuilt.com SERVICES</string>
    <string name="service_icon">service icon</string>
    <string name="architect">Architect</string>
    <string name="plumber">Plumber</string>
    <string name="vastu_consultant">Vastu Consultant</string>
    <string name="painter">Painter</string>
    <string name="electrician">Electrician</string>
    <string name="carpenter">Carpenter</string>
    <string name="interior_designer">Interior Designer</string>
    <string name="solar_planting">Solar Planting</string>
    <string name="view_all_services">View All Services</string>
    <string name="search_service">Search For a Service</string>
    <string name="trending_service">Trending Services</string>
    <string name="customer_testimonials">Customer Testimonials</string>
    <string name="repair_service">Repair Services</string>
    <string name="starting_from">Starting From</string>
    <string name="custom_image">custom_image</string>
    <string name="location_setting">Location Setting</string>
    <string name="allow_location_access">Allow Location Access</string>
    <string name="location_text">Your location will help us find professionals who serve in the area.</string>
    <string name="enable_location">Enable Location</string>
    <string name="or">or,</string>
    <string name="enable_location_manually">Enable manually</string>
    <string name="modular_kitchen">Modular Kitchen</string>
    <string name="book_service">Book Service</string>
    <string name="rate_card">Rate Card</string>
    <string name="best_services">Best Services</string>
    <string name="verified_experts">Verified Experts</string>
    <string name="service_on_time">Services On Time</string>
    <string name="transparent_pricing">Transparent Pricing</string>
    <string name="book_now_pay_later">Book now pay Later</string>
    <string name="desc_quantity">decrease quantity</string>
    <string name="inc_quantity">increase quantity</string>
    <string name="your_delivery_details">Your Delivery Details</string>
    <string name="select_payment_method">Select Payment Method</string>
    <string name="delivery_date">DELIVERY DATE</string>
    <string name="delivery_time">DELIVERY TIME</string>
    <string name="great">Awesome!</string>
    <string name="confirmation">Your order has been place successfully</string>
    <string name="view_order">View Order</string>
    <string name="your_requirement">Explain Your Requirement</string>
</resources>
