<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />

    <item
        android:id="@+id/nav_my_cart"
        android:icon="@drawable/ic_shopping_cart"
        android:title="@string/my_cart" />

    <item
        android:id="@+id/nav_hiw"
        android:icon="@drawable/ic_how_it_works"
        android:title="@string/how_it_works" />

    <item
        android:id="@+id/nav_services"
        android:icon="@mipmap/plumber"
        android:title="@string/services" />

    <item
        android:id="@+id/nav_notification"
        android:icon="@drawable/ic_notifications"
        android:title="@string/notifications" />

    <item
        android:id="@+id/nav_help"
        android:icon="@drawable/ic_help"
        android:title="@string/help" />

    <item
        android:id="@+id/nav_feedback"
        android:icon="@drawable/ic_note"
        android:title="@string/feedback" />
</menu>