<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/start"
    tools:context="com.example.lenovo.homebuilt.activity.SplashScreen">

    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@mipmap/logo"
        android:contentDescription="@string/app_name_logo" />

    <ImageView
        android:id="@+id/app_logo_name"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_below="@id/app_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:src="@mipmap/logotext" />

    <Button
        android:id="@+id/getStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:layout_marginStart="50dp"
        android:background="@drawable/get_start_bg"
        android:drawableEnd="@mipmap/app_logo"
        android:drawablePadding="40dp"
        android:elevation="10dp"
        android:paddingEnd="30dp"
        android:paddingStart="40dp"
        android:text="@string/get_start"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="40dp">

        <TextView
            android:id="@+id/best_services"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:drawableLeft="@drawable/ic_best_service"
            android:drawablePadding="10dp"
            android:text="@string/best_services"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/verified_experts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@id/best_services"
            android:layout_marginTop="10dp"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/ic_verified_user"
            android:text="@string/verified_experts"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/service_on_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@id/verified_experts"
            android:layout_marginTop="10dp"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/ic_service_on_time"
            android:text="@string/service_on_time"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/transparent_pricing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@id/service_on_time"
            android:layout_marginTop="10dp"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/ic_money"
            android:text="@string/transparent_pricing"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@id/transparent_pricing"
            android:layout_marginTop="10dp"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/ic_pay_book_later"
            android:text="@string/book_now_pay_later"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp" />
    </RelativeLayout>


</RelativeLayout>
