<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.lenovo.homebuilt.fragment.LoginFragment">


    <RelativeLayout
        android:id="@+id/id_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/id_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_id"
            android:textColor="#000"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/clear" />

        <EditText
            android:id="@+id/id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/id_text"
            android:inputType="text"
            android:labelFor="@id/id"
            android:maxLines="1"
            android:paddingEnd="20dp"
            android:paddingStart="10dp" />


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/password_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/id_layout"
        android:layout_marginTop="5dp">

        <TextView
            android:id="@+id/password_layout_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textColor="#000"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/show_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/show_password"
            android:src="@drawable/ic_visibility" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/password_layout_text"
            android:inputType="textPassword"
            android:labelFor="@id/password"
            android:maxLines="1"
            android:paddingEnd="20dp"
            android:paddingStart="10dp" />


    </RelativeLayout>

    <TextView
        android:id="@+id/forget_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_layout"
        android:text="@string/forget_password" />

    <Button
        android:id="@+id/log_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/forget_password"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_bg"
        android:elevation="5dp"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/log_in"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/horizontal_line" />

    <TextView
        android:id="@+id/login_or_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/view"
        android:layout_marginTop="30sp"
        android:text="@string/login_with"
        android:textAlignment="center"
        android:textSize="17sp" />

    <FrameLayout
        android:id="@+id/facebook_login_frame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_or_text"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp">

        <com.facebook.login.widget.LoginButton
            android:id="@+id/fb_login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone" />

        <Button
            android:id="@+id/facebook"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/facebook_button_bg"
            android:drawableStart="@drawable/ic_facebook_logo"
            android:elevation="5dp"
            android:paddingEnd="0dp"
            android:paddingStart="20dp"
            android:text="@string/facebook_login"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:textSize="16sp"
            android:textStyle="bold" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/google_login_frame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/facebook_login_frame"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp">

        <com.google.android.gms.common.SignInButton
            android:id="@+id/google_login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone" />

        <Button
            android:id="@+id/google"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/google_button_bg"
            android:drawableStart="@drawable/ic_google_plus"
            android:elevation="5dp"
            android:paddingEnd="0dp"
            android:paddingStart="20dp"
            android:text="@string/google_login"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />
    </FrameLayout>
</RelativeLayout>
