<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:padding="10dp">

        <ImageView
            android:id="@+id/confirmation_logo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/great"
            android:src="@drawable/ic_check" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_below="@id/confirmation_logo" />

        <TextView
            android:id="@+id/great"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/view"
            android:layout_centerHorizontal="true"
            android:text="@string/great"
            android:textColor="#000"
            android:textSize="20sp" />

        <View
            android:id="@+id/view1"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_below="@id/great" />

        <TextView
            android:id="@+id/confirmation_text"
            android:layout_width="match_parent"
            android:layout_below="@id/view1"
            android:text="@string/confirmation"
            android:textAlignment="center"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/view_order"
            android:layout_below="@id/confirmation_text"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:background="@color/imp_color"
            android:text="@string/view_order"
            android:textColor="#FFF"
            android:textAllCaps="false"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>
</RelativeLayout>