<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.lenovo.homebuilt.fragment.SignUpFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/first_name_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/first_name_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/first_name"
                android:textColor="#000"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/first_name_text"
                android:inputType="text"
                android:textSize="14sp"
                android:labelFor="@id/first_name"
                android:maxLines="1" />

        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/last_name_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/first_name_layout"
            android:layout_marginTop="5dp">

            <TextView
                android:id="@+id/last_name_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last_name"
                android:textColor="#000"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:layout_below="@id/last_name_text"
                android:inputType="text"
                android:labelFor="@id/last_name"
                android:maxLines="1" />
        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/email_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/last_name_layout"
            android:layout_marginTop="5dp">

            <TextView
                android:id="@+id/email_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textColor="#000"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/email_text"
                android:textSize="14sp"
                android:inputType="textEmailAddress"
                android:labelFor="@id/email"
                android:maxLines="1" />

        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/password_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/email_layout"
            android:layout_marginTop="5dp">

            <TextView
                android:id="@+id/password_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textColor="#000"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/password_text"
                android:textSize="14sp"
                android:inputType="textPassword"
                android:labelFor="@id/password"
                android:maxLines="1" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/mobile_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/password_layout"
            android:layout_marginTop="5dp">

            <TextView
                android:id="@+id/mobile_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_no"
                android:textColor="#000"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/mobile_text"
                android:inputType="number"
                android:textSize="14sp"
                android:labelFor="@id/mobile"
                android:maxLength="10"
                android:maxLines="1" />
        </RelativeLayout>

        <Button
            android:id="@+id/sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/mobile_layout"
            android:layout_margin="20dp"
            android:background="@drawable/button_bg"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </RelativeLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
